[package]
name = "nyeoglike"
version = "0.1.0"
authors = ["Nyeogmi <economicsbat@gmail.com>"]
description = "nyeogmi's roguelike, rewritten in Rust"
readme = "README.md"
homepage = "https://github.com/nyeogmi/nyeoglike-rs"
repository = "https://github.com/nyeogmi/nyeoglike-rs"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
areaportal2d = { path = "../areaportal2d" }
bresenham = "0.1.1"
chiropterm = { path = "../chiropterm" }
chiroptui = { path = "../chiroptui" }
euclid = "0.22"
gridd-euclid = "0.1.3"
moogle = "0.4.4"
smallvec = "1.7.0"